M1/S7/HAI705I Compilation/TP/TP2/PPParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		Skip=32, Number=33, Read=34, Write=35, True=36, False=37, Var=38, WS=39;
	public static final int
		RULE_entry = 0, RULE_genRule = 1, RULE_procFunExpr = 2, RULE_typeVar = 3, 
		RULE_newArrayExpr = 4, RULE_getArrayExpr = 5, RULE_setArrayExpr = 6, RULE_allocExpr = 7, 
		RULE_pair = 8, RULE_assignExpr = 9, RULE_condExpr = 10, RULE_whileExpr = 11, 
		RULE_procExpr = 12, RULE_argExpr = 13, RULE_varName = 14, RULE_constant = 15, 
		RULE_calle = 16, RULE_genInstr = 17, RULE_genExpr = 18, RULE_ppplus = 19, 
		RULE_ppmin = 20, RULE_ppmul = 21, RULE_ppdiv = 22, RULE_ppinf = 23, RULE_ppinfeg = 24, 
		RULE_ppsup = 25, RULE_ppsupeg = 26, RULE_ppeg = 27, RULE_ppdiff = 28, 
		RULE_ppand = 29, RULE_ppor = 30, RULE_ppinv = 31, RULE_ppnot = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry", "genRule", "procFunExpr", "typeVar", "newArrayExpr", "getArrayExpr", 
			"setArrayExpr", "allocExpr", "pair", "assignExpr", "condExpr", "whileExpr", 
			"procExpr", "argExpr", "varName", "constant", "calle", "genInstr", "genExpr", 
			"ppplus", "ppmin", "ppmul", "ppdiv", "ppinf", "ppinfeg", "ppsup", "ppsupeg", 
			"ppeg", "ppdiff", "ppand", "ppor", "ppinv", "ppnot"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "'integer'", "'boolean'", "'array of'", "'new'", 
			"'['", "']'", "':='", "'var'", "'if'", "'then'", "'else'", "'while'", 
			"'do'", "','", "';'", "'+'", "'-'", "'*'", "'/'", "'<'", "'<='", "'>'", 
			"'>='", "'='", "'!='", "'and'", "'or'", "'not'", "'skip'", null, "'read'", 
			"'write'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "Skip", "Number", "Read", 
			"Write", "True", "False", "Var", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntryContext extends ParserRuleContext {
		public PPProg e;
		public AllocExprContext global;
		public ProcFunExprContext rul;
		public GenInstrContext inst;
		public AllocExprContext allocExpr() {
			return getRuleContext(AllocExprContext.class,0);
		}
		public GenInstrContext genInstr() {
			return getRuleContext(GenInstrContext.class,0);
		}
		public ProcFunExprContext procFunExpr() {
			return getRuleContext(ProcFunExprContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitEntry(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((EntryContext)_localctx).global = allocExpr();
			{
			setState(67);
			((EntryContext)_localctx).rul = procFunExpr();
			}
			setState(68);
			((EntryContext)_localctx).inst = genInstr(0);
			((EntryContext)_localctx).e =  new PPProg(((EntryContext)_localctx).global.var,((EntryContext)_localctx).rul.value,((EntryContext)_localctx).inst.instr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenRuleContext extends ParserRuleContext {
		public PPDef r;
		public VarNameContext var;
		public ArgExprContext arg;
		public TypeVarContext type;
		public AllocExprContext local;
		public GenInstrContext instr;
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public GenInstrContext genInstr() {
			return getRuleContext(GenInstrContext.class,0);
		}
		public List<ArgExprContext> argExpr() {
			return getRuleContexts(ArgExprContext.class);
		}
		public ArgExprContext argExpr(int i) {
			return getRuleContext(ArgExprContext.class,i);
		}
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public AllocExprContext allocExpr() {
			return getRuleContext(AllocExprContext.class,0);
		}
		public GenRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterGenRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitGenRule(this);
		}
	}

	public final GenRuleContext genRule() throws RecognitionException {
		GenRuleContext _localctx = new GenRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_genRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((GenRuleContext)_localctx).var = varName();
			setState(72);
			match(T__0);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Var) {
				{
				{
				setState(73);
				((GenRuleContext)_localctx).arg = argExpr();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(T__1);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(80);
				match(T__2);
				setState(81);
				((GenRuleContext)_localctx).type = typeVar();
				((GenRuleContext)_localctx).r =  new PPFun(_localctx.r.name,_localctx.r.args,_localctx.r.locals,_localctx.r.code,((GenRuleContext)_localctx).type.t);
				}
			}

			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(86);
				((GenRuleContext)_localctx).local = allocExpr();
				}
			}

			setState(89);
			((GenRuleContext)_localctx).instr = genInstr(0);
			((GenRuleContext)_localctx).r =  new PPProc((((GenRuleContext)_localctx).var!=null?_input.getText(((GenRuleContext)_localctx).var.start,((GenRuleContext)_localctx).var.stop):null),((GenRuleContext)_localctx).arg.args,((GenRuleContext)_localctx).local.var,((GenRuleContext)_localctx).instr.instr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcFunExprContext extends ParserRuleContext {
		public ArrayList<PPDef> value;
		public GenRuleContext def;
		public List<GenRuleContext> genRule() {
			return getRuleContexts(GenRuleContext.class);
		}
		public GenRuleContext genRule(int i) {
			return getRuleContext(GenRuleContext.class,i);
		}
		public ProcFunExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procFunExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterProcFunExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitProcFunExpr(this);
		}
	}

	public final ProcFunExprContext procFunExpr() throws RecognitionException {
		ProcFunExprContext _localctx = new ProcFunExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procFunExpr);
		((ProcFunExprContext)_localctx).value =  new ArrayList<PPDef>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					((ProcFunExprContext)_localctx).def = genRule();
					_localctx.value.add(((ProcFunExprContext)_localctx).def.r);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeVarContext extends ParserRuleContext {
		public Type t;
		public TypeVarContext tab;
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public TypeVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterTypeVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitTypeVar(this);
		}
	}

	public final TypeVarContext typeVar() throws RecognitionException {
		TypeVarContext _localctx = new TypeVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeVar);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(T__3);
				((TypeVarContext)_localctx).t =  new Int();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(T__4);
				((TypeVarContext)_localctx).t =  new Bool();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__5);
				setState(105);
				((TypeVarContext)_localctx).tab = typeVar();
				((TypeVarContext)_localctx).t =  new Array(((TypeVarContext)_localctx).tab.t);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NewArrayExprContext extends ParserRuleContext {
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public GenExprContext genExpr() {
			return getRuleContext(GenExprContext.class,0);
		}
		public NewArrayExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newArrayExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterNewArrayExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitNewArrayExpr(this);
		}
	}

	public final NewArrayExprContext newArrayExpr() throws RecognitionException {
		NewArrayExprContext _localctx = new NewArrayExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_newArrayExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__6);
			setState(111);
			typeVar();
			setState(112);
			match(T__7);
			setState(113);
			genExpr(0);
			setState(114);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GetArrayExprContext extends ParserRuleContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public GenExprContext genExpr() {
			return getRuleContext(GenExprContext.class,0);
		}
		public GetArrayExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getArrayExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterGetArrayExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitGetArrayExpr(this);
		}
	}

	public final GetArrayExprContext getArrayExpr() throws RecognitionException {
		GetArrayExprContext _localctx = new GetArrayExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_getArrayExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			varName();
			setState(117);
			match(T__7);
			setState(118);
			genExpr(0);
			setState(119);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetArrayExprContext extends ParserRuleContext {
		public PPArraySet sa;
		public GenExprContext expr1;
		public GenExprContext expr2;
		public GenExprContext expr3;
		public List<GenExprContext> genExpr() {
			return getRuleContexts(GenExprContext.class);
		}
		public GenExprContext genExpr(int i) {
			return getRuleContext(GenExprContext.class,i);
		}
		public SetArrayExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setArrayExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterSetArrayExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitSetArrayExpr(this);
		}
	}

	public final SetArrayExprContext setArrayExpr() throws RecognitionException {
		SetArrayExprContext _localctx = new SetArrayExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setArrayExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((SetArrayExprContext)_localctx).expr1 = genExpr(0);
			setState(122);
			match(T__7);
			setState(123);
			((SetArrayExprContext)_localctx).expr2 = genExpr(0);
			setState(124);
			match(T__8);
			setState(125);
			match(T__9);
			setState(126);
			((SetArrayExprContext)_localctx).expr3 = genExpr(0);
			((SetArrayExprContext)_localctx).sa =  new PPArraySet(((SetArrayExprContext)_localctx).expr1.expr,((SetArrayExprContext)_localctx).expr2.expr,((SetArrayExprContext)_localctx).expr3.expr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AllocExprContext extends ParserRuleContext {
		public ArrayList<Pair<String,Type>> var;
		public PairContext v;
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public AllocExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allocExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterAllocExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitAllocExpr(this);
		}
	}

	public final AllocExprContext allocExpr() throws RecognitionException {
		AllocExprContext _localctx = new AllocExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_allocExpr);
		((AllocExprContext)_localctx).var =  new ArrayList<Pair<String,Type>>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(129);
			match(T__10);
			setState(133); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(130);
					((AllocExprContext)_localctx).v = pair();
					_localctx.var.add(((AllocExprContext)_localctx).v.p);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(135); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public Pair<String,Type> p;
		public VarNameContext string;
		public TypeVarContext type;
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			((PairContext)_localctx).string = varName();
			setState(138);
			match(T__2);
			setState(139);
			((PairContext)_localctx).type = typeVar();
			((PairContext)_localctx).p =  new Pair(((PairContext)_localctx).string.var.name,((PairContext)_localctx).type.t);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignExprContext extends ParserRuleContext {
		public PPAssign ass;
		public VarNameContext var;
		public GenExprContext exp;
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public GenExprContext genExpr() {
			return getRuleContext(GenExprContext.class,0);
		}
		public AssignExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterAssignExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitAssignExpr(this);
		}
	}

	public final AssignExprContext assignExpr() throws RecognitionException {
		AssignExprContext _localctx = new AssignExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			((AssignExprContext)_localctx).var = varName();
			setState(143);
			match(T__9);
			setState(144);
			((AssignExprContext)_localctx).exp = genExpr(0);
			((AssignExprContext)_localctx).ass =  new PPAssign(((AssignExprContext)_localctx).var.var.name,((AssignExprContext)_localctx).exp.expr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondExprContext extends ParserRuleContext {
		public PPCond c;
		public GenExprContext expr;
		public GenInstrContext instr1;
		public GenInstrContext instr2;
		public GenExprContext genExpr() {
			return getRuleContext(GenExprContext.class,0);
		}
		public List<GenInstrContext> genInstr() {
			return getRuleContexts(GenInstrContext.class);
		}
		public GenInstrContext genInstr(int i) {
			return getRuleContext(GenInstrContext.class,i);
		}
		public CondExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterCondExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitCondExpr(this);
		}
	}

	public final CondExprContext condExpr() throws RecognitionException {
		CondExprContext _localctx = new CondExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__11);
			setState(148);
			((CondExprContext)_localctx).expr = genExpr(0);
			setState(149);
			match(T__12);
			setState(150);
			((CondExprContext)_localctx).instr1 = genInstr(0);
			setState(151);
			match(T__13);
			setState(152);
			((CondExprContext)_localctx).instr2 = genInstr(0);
			((CondExprContext)_localctx).c =  new PPCond(((CondExprContext)_localctx).expr.expr,((CondExprContext)_localctx).instr1.instr,((CondExprContext)_localctx).instr2.instr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileExprContext extends ParserRuleContext {
		public PPWhile wh;
		public GenExprContext exp;
		public GenInstrContext inst;
		public GenExprContext genExpr() {
			return getRuleContext(GenExprContext.class,0);
		}
		public GenInstrContext genInstr() {
			return getRuleContext(GenInstrContext.class,0);
		}
		public WhileExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterWhileExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitWhileExpr(this);
		}
	}
